# iex

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: build-native-binaries.yml
crates/iex-bench/: Cargo.toml
crates/iex-bench/src/: main.rs
crates/iex-cli/: Cargo.toml
crates/iex-cli/src/: compat.rs  explain.rs  inspect.rs  main.rs  search.rs
crates/iex-core/: Cargo.toml
crates/iex-core/examples/: alternates_kernel_probe.rs  no_literal_regex_probe.rs
crates/iex-core/src/: engine.rs  expr.rs  inspect.rs  lib.rs  stats.rs
dashboard/: index.html
docs/: developer-inspection-command-surface.md
