[workspace]
resolver = "2"
members = [
  "crates/iex-core",
  "crates/iex-cli",
  "crates/iex-bench"
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["IX Engine Team"]
version = "0.2.0"

[workspace.dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
ignore = "0.4"
memchr = "2.8"
memmap2 = "0.9"
rayon = "1.10"
regex = "1.12"
regex-syntax = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
