[package]
name = "iex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
serde_json.workspace = true
iex-core = { path = "../iex-core" }

[[bin]]
name = "ix"
path = "src/main.rs"

[[bin]]
name = "iex-cli"
path = "src/main.rs"
