[package]
name = "iex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
ignore.workspace = true
memchr.workspace = true
memmap2.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
